--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html,
 .card{
     width: 30%;
     height: 35rem;
-    border: 2x solid black;
+    border: 2px solid black;
     border-radius: 12px;
     display: flex;
     flex-direction: column;    
@@ -19,18 +19,19 @@ html,
     margin: 2rem 0;
  }
 
- .Cardimgage{
+.Cardimage{
     width: 100%;
     height: 40%;
     object-fit: cover;
  }
-
+ 
+ 
  .CardHeader{
-    font: 2.2rem;
+    font-size:  2.2rem;
     margin-top: 1.2rem;
  }
 
- .Cardtext{
+.Cardtext{
 
 
  }
