--- a/style.css
+++ b/style.css
@@ -10,18 +10,19 @@ html,
 .card{
     width: 30%;
     height: 35rem;
-    border: 2px solid black;
+    border: 8px solid black;
     border-radius: 12px;
     display: flex;
     flex-direction: column;    
     align-items: center;    
     justify-content: space-around;  
     margin: 2rem 0;
+    background-color: white;
  }
 
 .Cardimage{
     width: 100%;
-    height: 40%;
+    height: 80%;
     object-fit: cover;
  }
  
@@ -43,4 +44,24 @@ html,
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+}
+
+
+.Title{
+    text-align: center;
+    font-size: 3rem;
+    background-color: blue;
+}
+
+body{
+    background-image: url(https://th.bing.com/th/id/OIP.bzm-P0dBvz_duYaXGMA23QHaH0?w=173&h=182&c=7&r=0&o=5&pid=1.7);
+}
+
+.card{
+    transition: all 0.3s;
+}
+
+
+.card:hover{
+    transform: scale(1.1)
 }
