--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html,
     background-color: white;
  }
 
-.Cardimage{
+img{
     width: 100%;
     height: 80%;
     object-fit: cover;
@@ -64,4 +64,20 @@ body{
 
 .card:hover{
     transform: scale(1.1)
+
+}
+
+.apple:hover{
+    transition: 90s;
+    transform: rotate(50turn);
+}
+
+.eggs:hover{
+    transition: 2s;
+    transform: scale(2) ;
+
+}
+
+.steak:hover{
+    transform:rotateY(180deg);
 }
