--- a/style.css
+++ b/style.css
@@ -79,5 +79,16 @@ body{
 }
 
 .steak:hover{
-    transform:rotateY(180deg);
+    transform:rotateY(150deg);
 }
+
+.soup:hover{
+    transform: matrix(1, 2, 3, 4, 5, 6);
+}
+
+.mushroom:hover{
+    transition: 5s;
+    transform: translate(120px, 50%);
+}
+
+
