--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     }
 
     .card{
-        width: 20%;
+        width: 22%;
         height: 90%;
         border: 8px solid black;
         border-radius: 12px;
@@ -16,7 +16,7 @@
         flex-direction: column;    
         align-items: center;    
         justify-content: space-around;  
-        margin: 2rem ;
+        margin: 2rem 0;
         background-color: white;
     }
 
@@ -85,15 +85,10 @@
 
     @media screen and (max-width: 800px) {
         .container {
-            flex-direction: row; /* Ensure it stays in a row */
-            justify-content: center; /* Center cards in the row */
-        }
-        .card {
-            margin: auto;
-            margin-top: 1rem;
-            width: 40%; /* Adjust card width */
+            flex-direction: row;
         }
     }
+    
     
     @media screen and (max-width: 480px) {
         .container {
@@ -105,5 +100,6 @@
             margin: auto;
             margin-top: 1rem;
             width: 90%; /* Wider cards for smaller screens */
+            height: auto;
         }
     }
